# rigraph

./: .BundledPackages  .Rbuildignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  404.html  AGENTS.html  AGENTS.md  AUTHORS-list.html  AUTHORS-list.md  BRANCHES.html  BRANCHES.md  CITATION.cff  CLAUDE.html  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  Makefile  Makefile-cigraph  NAMESPACE  NAMESPACE.in  NEWS.md  PR_REVIEW.md  README.md  _pkgdown.yml  air.toml  authors.html  authors.md  build_install.sh  check.R  cleanup  cleanup.win  codecov.yml  configure  configure.ac  (+22 more)
.aviator/: config.yml
.github/: CONTRIBUTING.md  copilot-instructions.md
R/: aaa-NOT-auto.R  aaa-a-deprecate.R  aaa-auto.R  aaa-basic-igraph.R  aaa-bipartite.R  aaa-centrality.R  aaa-cliques.R  aaa-coloring.R  aaa-community.R  aaa-cycles.R  aaa-embedding.R  aaa-error.R  aaa-flows.R  aaa-foreign.R  aaa-games.R  aaa-generators.R  aaa-graphlets.R  aaa-hrg.R  aaa-isomorphism.R  aaa-layout.R  aaa-motifs.R  aaa-nongraph.R  aaa-operators.R  aaa-paths.R  aaa-processes.R  aaa-progress.R  aaa-separators.R  aaa-spatial.R  aaa-status.R  aaa-structural.R  aaa-trees.R  aaa-visitors.R  adjacency.R  as_phylo.R  assortativity.R  attributes.R  auto.R  basic.R  bipartite.R  centrality.R  (+111 more)
articles/: current-deprecations.html  current-deprecations.md  deprecated-dot-case.html  deprecated-dot-case.md  igraph.html  igraph.md  igraph_ES.html  igraph_ES.md  index.html  index.md  installation-troubleshooting.html  installation-troubleshooting.md
data-raw/: clinks.R
demo/: centrality.R  cohesive.R  community.R  crashR.R  hrg.R  smallworld.R
doc/: c-core-upgrade-1.0.1-plan.md  plot.common.Rd
inst/: AUTHORS  CHANGELOG-C-DELETEME.md  CITATION  NEWS.md  README.md  deprecate-template.txt  deprecate.R  my_html_library.tcl  script.R
man/: E.Rd  V.Rd  aaa-igraph-package.Rd  add.edges.Rd  add.vertex.shape.Rd  add.vertices.Rd  add_edges.Rd  add_layout_.Rd  add_vertices.Rd  adjacency.spectral.embedding.Rd  adjacent.triangles.Rd  adjacent_vertices.Rd  aging.ba.game.Rd  aging.barabasi.game.Rd  aging.prefatt.game.Rd  align_layout.Rd  all_simple_paths.Rd  alpha.centrality.Rd  alpha_centrality.Rd  any_mutual.Rd  are.connected.Rd  are_adjacent.Rd  arpack.Rd  articulation.points.Rd  articulation_points.Rd  as.directed.Rd  as.igraph.Rd  as.matrix.igraph.Rd  as.undirected.Rd  as_adj.Rd  as_adj_list.Rd  as_adjacency_matrix.Rd  as_biadjacency_matrix.Rd  as_directed.Rd  as_edgelist.Rd  as_graphnel.Rd  as_ids.Rd  as_incidence_matrix.Rd  as_long_data_frame.Rd  as_membership.Rd  (+668 more)
news/: index.html  index.md
patch/: 0001-fix-include-quotes.patch  0002-upstream-deps.patch  0003-Temporary-fix.patch  0004-Tweak-function-definitions.patch  0004-chore-Fix-remaining-Stimulus-types.patch  0005-Accept-out-parameter.patch  0005-induced_subgraph_map.patch  0006-count_reachable.patch  0007-arpack-fix-obsolescent-character-length.patch  0007-deps.patch  0008-Tweak-function-definitions.patch  0101-Return-value-of-igraph_edges-is-a-vector-of-vertices.patch  0102-Return-value-of-igraph_topological_sorting-is-a-vect.patch
patches/: 0001-correct-catch-by-value.patch  0002-generate-R-fluid-communities.patch  0003-fix-endmark-type.patch  0003-remove-exit-from-lexers.patch  0004-temporarily-suspend-some-errors.patch  0005-prevent-gcc-ubsan-warning-in-bliss.patch  0006-fix-lto-warnings.patch  001-fix-blas-dgemv-call.patch  001-fix-cxsparse-include.patch  002-workaround-gml-creator.patch
reference/: $.igraph.es.html  $.igraph.html  $.igraph.vs.html  %c%.html  %du%.html  %m%.html  %s%.html  %u%.html  -.igraph.html  .igraph.status.html  .inc.html  E.html  E.md  LGL.html  V.html  (+1462 more)
src/: .gitignore  CMakeLists.txt  DensityGrid.cpp  DensityGrid_3d.cpp  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  README.md  blas.c  config.h  config.h.in  cpp11.cpp  cpp11.dd  cpprinterface.cpp  cpprinterface.dd  deps.mk  dnaupd.f  dummy.cpp  foreign-dl-lexer.c  foreign-dl-parser.c  foreign-dl-parser.h  foreign-dl-parser.y  foreign-gml-lexer.c  foreign-gml-parser.c  foreign-gml-parser.h  foreign-gml-parser.y  foreign-lgl-lexer.c  foreign-lgl-parser.c  foreign-lgl-parser.c.orig  foreign-lgl-parser.h  foreign-lgl-parser.y  foreign-ncol-lexer.c  foreign-ncol-parser.c  foreign-ncol-parser.c.orig  foreign-ncol-parser.h  foreign-ncol-parser.y  foreign-pajek-lexer.c  foreign-pajek-parser.c  foreign-pajek-parser.h  (+39 more)
src/bliss/: graph.cc
src/core/io/: dl-lexer.c  dl-lexer.h  dl-parser.c  dl-parser.h  gml-lexer.c  gml-lexer.h  gml-parser.c  gml-parser.h  gml.c  lgl-lexer.c  lgl-lexer.h  lgl-parser.c  lgl-parser.h  ncol-lexer.c  ncol-lexer.h  ncol-parser.c  ncol-parser.h  pajek-lexer.c  pajek-lexer.h  pajek-parser.c  pajek-parser.h
src/include/: config.h  dl-lexer.h  gml-lexer.h  igraph.h  igraph_config.h  igraph_interface.h  igraph_threading.h  igraph_version.h  lgl-lexer.h  ncol-lexer.h  pajek-lexer.h
src/include/igraph/: config.h  igraph_export.h  igraph_version.h
src/include/igraph/io/parsers/: dl-lexer.c  dl-lexer.h  dl-parser.c  dl-parser.h  gml-lexer.c  gml-lexer.h  gml-parser.c  gml-parser.h  lgl-lexer.c  lgl-lexer.h  lgl-parser.c  lgl-parser.h  ncol-lexer.c  ncol-lexer.h  ncol-parser.c  ncol-parser.h  pajek-lexer.c  pajek-lexer.h  pajek-parser.h
src/include/io/parsers/: dl-lexer.c  dl-lexer.h  gml-lexer.c  gml-lexer.h  gml-parser.c  lgl-lexer.c  lgl-lexer.h  lgl-parser.c  lgl-parser.h  ncol-lexer.c  ncol-lexer.h  ncol-parser.h  pajek-lexer.c  pajek-lexer.h  pajek-parser.c
src/uuid/: gen_uuid.c
tools/py-stimulus/: .gitrepo  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  tbump.toml
tools/py-stimulus/docs/: index.mdx
tools/py-stimulus/src/stimulus/: __main__.py  errors.py  utils.py  version.py
tools/py-stimulus/src/stimulus/generators/: __init__.py  base.py  debug.py  java.py  python.py  r.py  registry.py  shell.py  utils.py
tools/py-stimulus/src/stimulus/model/: __init__.py  base.py  docstrings.py  functions.py  parameters.py  types.py
tools/py-stimulus/src/stimulus/providers/: docstrings.py
(+1450 files in other folders)
